--- a/index.qmd
+++ b/index.qmd
@@ -93,6 +93,7 @@ format:
 library(np)
 library(bkcde)
 library(knitr)
+library(kableExtra)
 options(plot.par.mfrow=FALSE)
 require(sem)
 library(crs)
@@ -637,6 +638,148 @@ dgp <- matrix(dnorm(eg$y,mean=eg$x^2,sd=sn*sd.unif),n.grid,n.grid)
 persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),ticktype="detailed", xlab="x", ylab="y", zlab="f(y|x)")
 ```
 
+```{r}
+#| echo: false
+#| cache: false
+p.max <- scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.beta.ml.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)) 
+
+p.max <- scan("../work_lin_empirical_bounds/3D_cvml/beta/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.beta.ml.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.beta.ls.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_lin_empirical_bounds/3D_cvls/beta/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.beta.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.norm.ml.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_lin_empirical_bounds/3D_cvml/norm/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.norm.ml.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.norm.ls.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+p.max <- scan("../work_lin_empirical_bounds/3D_cvls/norm/n_100/degree_max.dat",quiet=TRUE)
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
+
+rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2))
+
+```
+
+
 ## ML-CV Candidate Model Results for Beta DGP
 
 -   We conduct Monte Carlo simulations are report the average relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
@@ -653,24 +796,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-beta-ml-irr
     #| tbl-cap: Relative RMSE Irrelevant
-    library(knitr)
-    library(kableExtra)
-    p.max <- scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.beta.ml.irr,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
@@ -683,23 +809,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-beta-ml-quad
     #| tbl-cap: Relative RMSE Quadratic
-    library(knitr)
-    p.max <- scan("../work_lin_empirical_bounds/3D_cvml/beta/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.beta.ml.quad,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(4,8), bold = T, color = "green")
@@ -722,24 +832,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-beta-ls-irr
     #| tbl-cap: Relative RMSE Irrelevant     
-    library(knitr)
-    library(kableExtra)
-    p.max <- scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.beta.ls.irr,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
@@ -752,23 +845,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-beta-ls-quad
     #| tbl-cap: Relative RMSE Quadratic
-    library(knitr)
-    p.max <- scan("../work_lin_empirical_bounds/3D_cvls/beta/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.beta.ls.quad,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(4,8), bold = T, color = "green")
@@ -791,23 +868,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-norm-ml-irr
     #| tbl-cap: Relative RMSE Irrelevant 
-    library(knitr)
-    p.max <- scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.norm.ml.irr,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
@@ -820,23 +881,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-norm-ml-quad
     #| tbl-cap: Relative RMSE Quadratic
-    library(knitr)
-    p.max <- scan("../work_lin_empirical_bounds/3D_cvml/norm/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.norm.ml.quad,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(4,8), bold = T, color = "green")
@@ -852,30 +897,14 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
 -   If you knew *ex ante* which polynomial order to select, you would use that.
 
     ::: panel-tabset
-    ### Irrelevant
+    ### Irrelevant 
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-dgp-norm-ls-irr
     #| tbl-cap: Relative RMSE Irrelevant  
-    library(knitr)
-    p.max <- scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.norm.ls.irr,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
@@ -888,23 +917,7 @@ persp(x,y,dgp,theta=theta, phi=phi, main=latex2exp::TeX(r'($N(x^2,1/12)$)'),tick
     #| cache: false
     #| label: tbl-dgp-norm-ls-quad
     #| tbl-cap: Relative RMSE Quadratic
-    library(knitr)
-    p.max <- scan("../work_lin_empirical_bounds/3D_cvls/norm/n_100/degree_max.dat",quiet=TRUE)
-
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)[1]),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_candidates.out",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)[1]))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)], 1, median.dat[,(p.max+3),drop=FALSE], FUN = '/'),format="f",digits=2)),
+    kable(rmse.norm.ls.quad,
           col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(4,8), bold = T, color = "green")
@@ -1665,17 +1678,6 @@ kable(sf.norm.cvml.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-<!-- ### Cosine -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- kable(sf.norm.cvml.cos,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>% -->
-
-<!-- add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2)) -->
-
-<!-- ``` -->
 :::
 
 ## Beta ML-CV
@@ -1697,17 +1699,6 @@ kable(sf.beta.cvml.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-<!-- ### Cosine -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- kable(sf.beta.cvml.cos,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>% -->
-
-<!-- add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2)) -->
-
-<!-- ``` -->
 :::
 
 # Scale Factor Summaries LS-CV
@@ -1735,21 +1726,6 @@ kable(sf.norm.cvls.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-<!-- ### Cosine -->
-
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- #| label: tbl-sf-norm-cvls-cos -->
-
-<!-- #| tbl-cap: Scale Factor Summary -->
-
-<!-- kable(sf.norm.cvls.cos,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>% -->
-
-<!-- add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2)) -->
-
-<!-- ``` -->
 :::
 
 ## Beta LS-CV
@@ -1775,21 +1751,7 @@ kable(sf.beta.cvls.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-<!-- ### Cosine -->
 
-<!-- ```{r} -->
-
-<!-- #| echo: false -->
-
-<!-- #| label: tbl-sf-beta-cvls-cos -->
-
-<!-- #| tbl-cap: Scale Factor Summary -->
-
-<!-- kable(sf.beta.cvls.cos,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>% -->
-
-<!-- add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2)) -->
-
-<!-- ``` -->
 :::
 
 ## References (scrollable) {.allowframebreaks}
